fixed issue where on iphone, body would shift to right when menu is opened

--- a/public/styles/state/_no-scroll.scss
+++ b/public/styles/state/_no-scroll.scss
@@ -1,5 +1,6 @@
 .no-scroll {
 	overflow: hidden;
 	position: fixed;
-	left: 0;
+	width: 100%;
+	height: 100%;
 }
